--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
@@ -21,7 +21,7 @@
 \maketitle
 
 % \summary
-\input{abstract.tex}
+% \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
@@ -30,7 +30,7 @@
 
 % \input{introduction.tex}
 % \input{related_work.tex}
-% \input{background_and_system_model.tex}
+\input{background_and_system_model.tex}
 % \input{challenges.tex}
 \input{priority_driven_chain_aware_scheduling.tex}
 % \input{analysis_of_end_to_end_latency.tex}
