--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/abstract.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/abstract.tex
@@ -3,31 +3,7 @@
 \begin{frame}{提案手法の概要}
     \begin{itemize}
         \item ROS2フレームワーク用の新しい優先度駆動型チェーン考慮スケジューラ (PiCAS) を提案
-        \item PiCASの最悪エンドツーエンドレイテンシ分析を示す
-        \item PiCASでは対応するチェーンの重要度に基づいてコールバックに優先度が付けられるため, 重要なチェーンのエンドツーエンドレイテンシを改善できる
+        \item PiCASの最悪エンドツーエンドレイテンシ分析を提示
+        \item PiCASは対応するチェーンの重要度に基づいてコールバックに優先度を付与するため, 重要なチェーンのエンドツーエンドレイテンシを改善する
     \end{itemize}
 \end{frame}
-
-% \begin{frame}{Abstract 1}
-%     \begin{itemize}
-%         \item ROS (ロボットオペレーティングシステム) では, ほとんどのアプリケーションがデータ依存関係を持つコールバックチェーンの形式で構築される
-%         \item リアルタイムサポートの欠点により, ROS はタイミング保証を提供せず, 悲惨な結果につながる可能性がある
-%         \item ROS2 はリアルタイム機能を強化するが, 予測可能なエンドツーエンドチェーンレイテンシを確保することは依然として困難な問題である
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{Abstract 2}
-%     \begin{itemize}
-%         \item 本論文では, ROS2フレームワーク用の新しい優先度駆動型チェーン考慮スケジューラを提案し, 提案されたスケジューラのエンドツーエンドのレイテンシ分析を提示する
-%         \item このスケジューラを使用すると, 対応するチェーンの特定のタイミング要件に基づいてコールバックに優先度が付けられるため, 重要なチェーンのエンドツーエンドのレイテンシを予測可能な範囲で改善できる
-%         \item 提案されたスケジューリング設計には, ROS2 スケジューリング関連の全ての要素 (コールバック, ノード, エグゼキュータなど) を考慮した優先度の割り当てとリソース割り当てが含まれる
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{Abstract 3}
-%     \begin{itemize}
-%         \item 本論文は, 新しいスケジューラ設計を提案することによってエンドツーエンドのレイテンシにおける ROS2 固有の制限に対処する最初の作業である
-%         \item NVIDIA Xavier NX 上で動作する ROS2 にスケジューラを実装した
-%         \item ケーススタディとスケジューラビリティの実験を実施した結果は, 提案されたスケジューラがデフォルトの ROS2 スケジューラおよび実際のシナリオでの最新の作業よりもエンドツーエンドのレイテンシを大幅に改善することを示した
-%     \end{itemize}
-% \end{frame}
