finish related work

--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
@@ -6,6 +6,11 @@
 \input{\beamerDir/setting.tex}
 
 
+%%%%% Mode %%%%%
+% \newcommand{\forme}[1]{#1}
+\newcommand{\forme}[1]{}
+
+
 %%%%% Front Cover %%%%%
 \title{PiCAS: New Design of Priority-Driven Chain-Aware Scheduling for ROS2}
 \subtitle{IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2021}
@@ -31,11 +36,11 @@
 % \input{introduction.tex}
 % \input{related_work.tex}
 \input{background_and_system_model.tex}
-% \input{challenges.tex}
+\input{challenges.tex}
 \input{priority_driven_chain_aware_scheduling.tex}
-% \input{analysis_of_end_to_end_latency.tex}
-% \input{evaluation.tex}
-% \input{conclusion.tex}
+\input{analysis_of_end_to_end_latency.tex}
+\input{evaluation.tex}
+\input{conclusion.tex}
 
 \lastpage
 
