--- a/setting.tex
+++ b/setting.tex
@@ -171,6 +171,7 @@
 \newcommand{\footerheight}[0]{3mm}
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
+\newcommand{\tabmlc}[1]{\begin{tabular}{c} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
 \newcommand{\ch}[0]{\checkmark}
 % \newcommand{\tb}[1]{\textbf{#1}} Don't use
