finish background_and_system_model

--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
@@ -127,7 +127,7 @@
 
 \begin{frame}{コールバックモデル}
     \begin{itemize}
-        \item システムには $M$ 個のリアルタイムコールバックがある
+        \item システムには $M$ 個のコールバックがある
         \item 各コールバックはタイマコールバック・レギュラーコールバックのいずれか
               \begin{block}{タイマコールバック}
                   周期的にトリガされるコールバック
@@ -135,9 +135,9 @@
               \begin{block}{レギュラーコールバック}
                   別のコールバックからのイベントによってトリガされるコールバック
               \end{block}
-              \vspace{5mm}
-        \item 各コールバックには 1 つのチェーンが関連付けられている
-        \item コールバックの相対デッドライン・周期は関連するチェーンの相対デッドライン・周期と同じ
+              \vspace{3mm}
+        \item 各コールバックは 1 つのチェーンに含まれる
+        \item コールバックの相対デッドライン・周期はチェーンの相対デッドライン・周期と同じ
     \end{itemize}
 \end{frame}
 
@@ -153,7 +153,6 @@
               \begin{equation*}
                   U\left(n_{j}\right)=\sum_{\forall t_{i}: \tau_{i} \in n_{j}} \frac{C_{i}}{T_{i}}
               \end{equation*}
-        \item ノードはスケジュール可能なエンティティではないため, ノードには優先度がない
         \item 同じノード内のコールバックを 2 つ以上のエグゼキュータに個別に割り当てることはできない
     \end{itemize}
 \end{frame}
@@ -172,7 +171,7 @@
                   Linux の固定優先度プリエンプティブリアルタイムスケジューリングポリシーであり, 優先度の範囲は 1 から 99
               \end{block}
               \vspace{5mm}
-        \item したがって, エグゼキュータの最大数は 99 に制限されている
+        \item したがって, エグゼキュータの最大数は 99
     \end{itemize}
 \end{frame}
 
@@ -186,13 +185,15 @@
               \end{equation*}
         \item チェーンの開始コールバックはタイマコールバックであり, その他はレギュラーコールバックであると想定する
               \notes{イベントによってトリガされるチェーンの場合, チェーンの最初のレギュラーコールバックを, イベントの到着周期を持つタイマコールバックとしてモデル化できる~\cite{casini2019response}}
-        % \item 従来のタスクモデルでの周期的なリアルタイムタスクは, 本論文のモデルでは単一のタイマコールバックチェーンとして表すことができる
+              \forme{\item 従来のタスクモデルでの周期的なリアルタイムタスクは, 本論文のモデルでは単一のタイマコールバックチェーンとして表すことができる}
     \end{itemize}
 \end{frame}
 
-% \begin{frame}{チェーン優先度の意味合い}
-%     \begin{itemize}
-%         \item チェーンの優先度 $\pi_{\Gamma^{c}}$ は, システム設計者がシステム内での重要性または重要性に基づいて指定すると仮定する
-%         \item これは元の ROS2 フレームワークの一部ではないが, アプリケーションレベルの要件を満たすために, コールバックとエグゼキュータの優先度の割り当てを調整する必要があるため, 優先度と呼ぶ
-%     \end{itemize}
-% \end{frame}
+\forme{
+    \begin{frame}{チェーン優先度の意味合い}
+        \begin{itemize}
+            \item チェーンの優先度 $\pi_{\Gamma^{c}}$ は, システム設計者がシステム内での重要性または重要性に基づいて指定すると仮定する
+            \item これは元の ROS2 フレームワークの一部ではないが, アプリケーションレベルの要件を満たすために, コールバックとエグゼキュータの優先度の割り当てを調整する必要があるため, セマンティクス優先度と呼ぶ
+        \end{itemize}
+    \end{frame}
+}
