--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/symbols_terms.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/symbols_terms.tex
@@ -8,7 +8,7 @@
                     $M$                                                                                & システム内のコールバックの数                         \\\hline
                     $\tau_{i}:=\left(C_{i}, D_{i}, T_{i}, \pi_{i}\right)$                              & コールバック                                         \\\hline
                     $C_{i}$                                                                            & $\tau_{i}$ のジョブの最悪実行時間                    \\\hline
-                    $D_{i}$                                                                            & コールバック $\tau_{i}$ の相対的なデッドライン       \\\hline
+                    $D_{i}$                                                                            & コールバック $\tau_{i}$ の相対デッドライン       \\\hline
                     $T_{i}$                                                                            & コールバック $\tau_{i}$ の周期                       \\\hline
                     $\pi_{i}$                                                                          & エグゼキュータ内でのコールバック $\tau_{i}$ の優先度 \\\hline
                     $\mathcal{N}=:\left\{n_{1}, \ldots, n_{j}, \ldots, n_{N}\right\}$                  & ノードセット                                         \\\hline
