--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
@@ -64,16 +64,16 @@
       \begin{itemize}
         \item デフォルトでは, エグゼキュータは Linux カーネルの Completely Fair Scheduler (CFS)~\cite{wong2008fairness} によってスケジュールされる
         \item CFSの下では, 重要度が高いチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先度を付けることは困難
-        \item システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 はそれを構成するための公式のインターフェイスを提供していない
-        \item ROS2 エグゼキュータ の優先度の割り当てに関する一般的なガイドラインはない
+        \item システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 は公式のインターフェイスを提供していない
+        \item ROS2 エグゼキュータの優先度の割り当てに関する一般的なガイドラインは無い
       \end{itemize}
     \end{block}
 \end{frame}
 
-\begin{frame}{[課題2] 直観的な方法}
+\begin{frame}{[課題2] 直観的な対策}
     \fitimage{
         \begin{itemize}
-            \item 直感的な方法は, 重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てること
+            \item 直感的な対策は, 重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てること
             \item チェーン1の全てのコールバックを含むエグゼキュータの優先度を99とし, チェーン2の他のエグゼキュータの優先度98とした場合のスケジュールタイムラインを図に示す
         \end{itemize}
     }{challenge2_timeline.png}
@@ -82,7 +82,7 @@
 \begin{frame}{[課題2] 直観的な方法の問題点}
     \fitimage{
         \begin{itemize}
-            \item しかし, インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
+            \item インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
             \item さらに, 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先度の割り当てはより困難になる
         \end{itemize}
     }{challenge2_result.jpg}
